--- a/Public/css/estilo.css
+++ b/Public/css/estilo.css
@@ -4,7 +4,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: black;
+  background-image: url(../assets/FundoCadastro.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 :root {
@@ -17,8 +19,17 @@ body {
 
 .container {
   display: flex;
-  width: 80%;
-  margin: auto;
+  width: 100%;
+  margin: 0;
+}
+
+.containerLogin {
+  display: flex;
+  width: 100%;
+  margin: 0;
+  height: 607px;
+  align-items: center;
+  justify-content: center;
 }
 
 .header {
@@ -118,29 +129,12 @@ body {
   align-items: center;
 }
 
-/* FOOTER */
 
-.footer {
-  background-color: #32b9cd;
-  height: 150px;
-  color: #fff;
-  display: flex;
-  font-size: 15px;
-}
-
-.footer .container {
-  justify-content: center;
-  text-align: center;
-}
-
-.footer .container .version {
-  font-size: 12px;
-}
 
 /* LOGIN */
 
 .login {
-  height: var(--tamanho-login);
+  height: 100vh;
   background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
   background-size: cover;
 }
@@ -148,25 +142,40 @@ body {
 .login .container {
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 607px;
 }
 
 .card {
-  width: 50%;
-  background-color: #e5e5e5;
+  width: 623px;
+  height: 438px;
+  background-color: #d9d9d9c0;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  color: palevioletred;
+  color: rgb(0, 0, 0);
   flex-direction: column;
-  height: fit-content;
+  padding: 20px 0;
+}
+.cardLogin{
+  width: 623px;
+  height: 438px;
+  background-color: #d9d9d9c0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: rgb(0, 0, 0);
+  flex-direction: column;
   padding: 20px 0;
 }
 
 .card h2 {
-  margin: 0;
+  align-self: start;
+  margin: 7px;
+  padding-left: 57px;
   font-size: 30px;
+  padding-bottom: 20px;
 }
 
 .formulario {
@@ -177,26 +186,44 @@ body {
   flex-direction: column;
 }
 
+.formularioLogin {
+  display: flex;
+  height: 90%;
+  width: 80%;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
 .formulario span {
   font-size: 15px;
-  font-weight: 800;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+
+.formularioLogin span {
+  font-size: 15px;
+  font-weight: 600;
+  padding-bottom: 5px;
 }
 
 .formulario input {
-  border: 2px solid #32b9cd;
-  text-align: center;
-  border-radius: 10px;
+  width: 483px;
+  height: 22px;
+  border: none;
+  text-align: start;
+  border-radius: 15px;
   margin: 0;
+  font-size: 15px;
 }
 
-.formulario select {
-  border: 2px solid #32b9cd;
-  background-color: white;
-  color: gray;
-  height: 36px;
-  text-align: center;
-  border-radius: 10px;
+.formularioLogin input {
+  width: 483px;
+  height: 22px;
+  border: none;
+  text-align: start;
+  border-radius: 15px;
   margin: 0;
+  font-size: 15px;
 }
 
 .campo {
@@ -210,16 +237,17 @@ body {
   cursor: pointer;
   font-family: "Barlow", sans-serif;
   border: 0;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 18px;
+  border-radius: 15px;
+  font-weight: 720px;
+  font-size: 25px;
   color: #fff;
-  background-color: #e6005a;
-  width: 120px;
-  height: 30px;
+  background-color: #2C3373;
+  width: 252px;
+  height: 38px;
   align-self: center;
   margin-top: 20px;
 }
+
 
 .loading-div {
   width: 50px;
@@ -237,13 +265,14 @@ body {
 
 /* FORMULARIO */
 
-.alerta_erro{
+.alerta_erro {
   display: flex;
   justify-content: flex-end;
 }
 
 .card_erro {
   display: none;
+  background-color: #fff;
   background-color: #fff;
   color: black;
   width: 230px;
@@ -254,7 +283,7 @@ body {
   margin-right: 10%;
 }
 
-.card_erro #mensagem_erro{
+.card_erro #mensagem_erro {
   font-weight: 500;
   font-size: 20px;
 }
@@ -310,7 +339,7 @@ input {
 
 .simulador .container {
   flex-direction: column;
-  overflow: scroll; 
+  overflow: scroll;
   height: var(--tamanho-simulador);
 }
 
@@ -354,9 +383,23 @@ input {
 }
 
 @keyframes bell {
-  0%   {transform: rotate(25deg)}
-  25%  {transform: rotate(-25deg)}
-  50%  {transform: rotate(25deg)}
-  75%  {transform: rotate(-25deg)}
-  100% {transform: rotate(25deg)}
+  0% {
+    transform: rotate(25deg)
+  }
+
+  25% {
+    transform: rotate(-25deg)
+  }
+
+  50% {
+    transform: rotate(25deg)
+  }
+
+  75% {
+    transform: rotate(-25deg)
+  }
+
+  100% {
+    transform: rotate(25deg)
+  }
 }
