--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -5,5 +5,7 @@ body{
 .fundoImg{
     width: 100vw;
     height: 100vh;
-    background-image: url();
+    background-image: url(../assets/index/FundoBack1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
