--- a/Public/css/estilo.css
+++ b/Public/css/estilo.css
@@ -212,10 +212,11 @@ body {
   justify-content: space-evenly;
   color: rgb(0, 0, 0);
   flex-direction: column;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9)
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
+  position: sticky;
 
 
-}
+} 
 
 .card h2 {
   align-self: start;
@@ -231,6 +232,7 @@ body {
   width: 80%;
   justify-content: space-around;
   flex-direction: column;
+  align-items: center;
 }
 
 .formularioLogin {
