--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -21,8 +27,10 @@ body {
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    background-color: rgb(129, 129, 129);
+    color: white;
     position: sticky;
-
+    top: 0;
 }
 
 #navbar ul {
@@ -41,9 +49,11 @@ body {
     display: flex;
     height: 100%;
     width: 100%;
+    margin: 0;
 }
 
 .PrimeiraPagina {
+    margin: 0;
     height: 100vh;
     width: 100%;
     background-image: url(../assets/index/FundoBack2.png);
@@ -75,6 +85,7 @@ body {
 .SegundaPagina {
     height: 100vh;
     width: 100%;
+    margin: 0;
     background-image: url(../assets/index/FundoBack3.png);
     background-repeat: no-repeat;
     background-position: 80vh;
@@ -110,6 +121,11 @@ body {
     border-radius: 20px;
     border: none;
     font-size: 22px;
+    transition: 0.5;
+}
+
+.textoPaginaP3 :hover button {
+    background-color: rgb(208, 202, 168);
 }
 
 #depoimento {
@@ -120,4 +136,74 @@ body {
 .Sobreposicao img {
     width: 100%;
     height: 100vh;
+}
+
+.TerceiraPagina {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    background-image: url(../assets/index/FundoBack4.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: space-around;
+}
+
+.cards {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+
+
+.telinha1 {
+    margin: 0;
+    width: 26vw;
+    height: 80vh;
+    border-radius: 34px;
+    background-color: rgba(245, 245, 245, 0.501);
+}
+
+.QuintaPagina {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.SobreMim {
+    width: 35vw;
+    height: 75vh;
+    border-radius: 18px;
+    background-color: bisque;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+.pont{
+    width: 25px;
+    height: 15px;
+    border-radius: 80px;
+    background-color: #a6a6a6;
+    margin-bottom: 15px;
+    margin-right: 10px;
+}
+
+.SeobreMimText {
+    width: 57%;
+    font-family: math;
+    font-size: 19px;
+}
+
+#navbar .fixed {
+    position: sticky;
+    top: 0%;
+    left: 0%;
+
 }
