--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -1,12 +1,18 @@
-*{
+* {
     padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    font-family: math;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+body::-webkit-scrollbar{
+    display: none;
 }
 
 .fundoImg {
@@ -24,13 +30,18 @@ body {
 
 #navbar {
     display: flex;
+    width: 100%;
+    height: 50px;
     align-items: center;
     flex-direction: row;
     justify-content: center;
-    background-color: rgb(129, 129, 129);
-    color: white;
+    background-color: rgba(175, 175, 175, 1);
+    color: rgb(0, 0, 0);
     position: sticky;
     top: 0;
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
+
+
 }
 
 #navbar ul {
@@ -43,6 +54,18 @@ body {
 #navbar li {
     margin-left: 30px;
     float: left;
+}
+
+#cadastro {
+    background-color: #2C3373;
+    color: white;
+    display: flex;
+    border: none;
+    border-radius: 15px;
+    width: 109px;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
 }
 
 .ContainerGrande {
@@ -160,8 +183,8 @@ body {
 
 .telinha1 {
     margin: 0;
-    width: 26vw;
-    height: 80vh;
+    width: 27vw;
+    height: 65vh;
     border-radius: 34px;
     background-color: rgba(245, 245, 245, 0.501);
 }
@@ -186,7 +209,8 @@ body {
     flex-wrap: nowrap;
     justify-content: center;
 }
-.pont{
+
+.pont {
     width: 25px;
     height: 15px;
     border-radius: 80px;
