--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -1,5 +1,6 @@
 * {
     padding: 0;
+    margin: 0;
     font-family: math;
 }
 
@@ -25,14 +26,16 @@ body::-webkit-scrollbar {
 }
 
 .box img {
-    width: 98vw;
-    height: 97vh;
+    width: 90vw;
+    height: 90vh;
+    margin-left: 5vw;
 }
 
 #navbar {
     display: flex;
     width: 100%;
     height: 50px;
+    z-index: 15;
     align-items: center;
     flex-direction: row;
     justify-content: center;
@@ -43,6 +46,9 @@ body::-webkit-scrollbar {
     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
 
 
+}
+#navbar img {
+    size: 4vw; 
 }
 
 #navbar ul {
