--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -170,7 +170,6 @@ body::-webkit-scrollbar {
 
 #depoimento {
     font-size: 19px;
-    margin: 10px;
 }
 
 .Sobreposicao img {
@@ -272,7 +271,6 @@ body::-webkit-scrollbar {
     width: 100%;
     margin: 0;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
 }
@@ -280,27 +278,36 @@ body::-webkit-scrollbar {
 .SobreMim {
     width: 35vw;
     height: 75vh;
-    border-radius: 18px;
-    background-color: bisque;
-    display: flex;
-    align-items: flex-end;
-    flex-wrap: nowrap;
-    justify-content: center;
+    }
+
+.SobreMim img {
+    width: 85%;
+    border-radius: 29px;
+    border: solid 1px;
 }
 
-.pont {
-    width: 25px;
-    height: 15px;
-    border-radius: 80px;
-    background-color: #a6a6a6;
-    margin-bottom: 15px;
-    margin-right: 10px;
-}
 
 .SeobreMimText {
     width: 57%;
     font-family: math;
     font-size: 19px;
+}
+.butao{
+    position: absolute;
+    left: 16vw;
+    top: 494vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.butao div{
+    width: 19px;
+    height: 12px;
+    background-color: #262626;
+    border-radius: 80px;
+    border: solid 1.5px;
+    
+
 }
 
 .SextaTela {
@@ -397,14 +404,14 @@ body::-webkit-scrollbar {
     margin: 0;
 }
 
-.SextaTela footer {
+.footer {
     width: 100%;
     height: 157px;
     background-color: #AFAFAF;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .LogoBlack img {
@@ -414,5 +421,6 @@ body::-webkit-scrollbar {
 
 .RedesContato img {
     height: 6vh;
-    margin: 6px
+    margin: 6px;
+    margin-r
 }
