--- a/Public/dashboard/game.css
+++ b/Public/dashboard/game.css
@@ -3,7 +3,9 @@
  padding: 0;
  box-sizing: border-box;
 }
-
+body::-webkit-scrollbar{
+ display: none;
+}
 body {
  background-image: url(../assets/index/fundoCadastro.jpg);
  background-size: cover;
@@ -125,4 +127,293 @@ nav button {
 
 #exit {
  width: 32px;
+}
+
+.geral {
+ width: 100%;
+ height: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+}
+
+.resposta-btn{
+ display: flex;
+ justify-content: space-around;
+ width: 112px;
+ height: 32px;
+ background-color: rgb(0, 0, 141);
+ align-items: center;
+ font-size: 20px;
+ color: white;
+ border-radius: 10px;
+ border: none;
+ transition: .9s;
+ cursor: pointer;
+}
+.resposta-btn:hover{
+ background-color: rgb(11, 11, 194);;
+}
+
+
+
+.content{
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ align-items: center;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-around;
+ 
+}
+
+.content h3{
+ font-size: 36px;
+}
+.content p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.respostas {
+ display: flex;
+}
+.respostas button {
+ margin: 5px;
+}
+
+.content1{
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ display: none;
+ flex-direction: column;
+ align-items: center;
+}
+
+.conten1 h3{
+ font-size: 36px;
+}
+.content1 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content2 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten2 h3{
+ font-size: 36px;
+}
+.content2 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content3 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten3 h3{
+ font-size: 36px;
+}
+.content3 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content4 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten4 h3{
+ font-size: 36px;
+}
+.content4 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content5 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten5 h3{
+ font-size: 36px;
+}
+.content5 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content6 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten6 h3{
+ font-size: 36px;
+}
+.content6 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content7 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten7 h3{
+ font-size: 36px;
+}
+.content7 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content8 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten8 h3{
+ font-size: 36px;
+}
+.content8 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content9 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten9 h3{
+ font-size: 36px;
+}
+.content9 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
+}
+
+.content10 {
+ width: 51vw;
+ height: 66vh;
+ background-color: #cbcbcb;
+ border-radius: 15px;
+ margin-top: 23vh;
+ box-shadow: 0 0 20px black;
+ justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ display: none;
+}
+
+.conten10 h3{
+ font-size: 36px;
+}
+.content10 p {
+ margin: 15px;
+ font-size: 20px;
+ text-align: center;
 }
