--- a/Public/dashboard/gameExperiente.css
+++ b/Public/dashboard/gameExperiente.css
@@ -436,3 +436,21 @@ nav button {
  font-size: 20px;
  text-align: center;
 }
+
+#finalizar-btn {
+ display: block;
+ width: 200px; /* Adjust the width as needed */
+ height: 50px; /* Adjust the height as needed */
+ margin: 20px auto; /* Center the button horizontally with some margin */
+ background-color: #ff5733; /* Choose a color that contrasts well with the background */
+ color: white; /* Text color */
+ font-size: 20px; /* Adjust font size as needed */
+ border: none;
+ border-radius: 10px;
+ cursor: pointer;
+ transition: background-color 0.3s;
+}
+
+#finalizar-btn:hover {
+ background-color: #e64a19; /* Darker shade of the button color on hover */
+}
