--- a/Public/dashboard/style.css
+++ b/Public/dashboard/style.css
@@ -8,7 +8,11 @@ body {
  background-image: url(../assets/index/fundoCadastro.jpg);
  background-size: cover;
  background-repeat: no-repeat;
+ background-attachment: fixed;
+}
 
+html {
+    height: 100%;
 }
 
 #logo {
@@ -131,25 +135,70 @@ nav button {
  width: 100%;
  height: 100%;
  display: flex;
- flex-direction: row;
- justify-content: space-around;
- align-items: center;
- 
-}
-.grafico{
- width: 576px;
- height: 318px;
- border-radius: 15px;
- background-color: gray;
- display: flex;
- flex-direction: column;
- margin-top: 162px;
- margin-left: 3px;
+ flex-direction:  row;
+ justify-content: space-evenly;
  align-items: center;
 }
-canvas {
- margin: 15px;
+.ranking{
+    display: flex;
+    width: 34vw;
+    height: 84vh;
+    background-color: gray;
+    margin-top: 80px;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
 }
-#grafico1{
- width: 50%;
+
+.ranking p {
+    margin-right: 2vw;
+    font-size: 19px;
+}
+
+
+.graficos{
+    width: 61vw;
+    height: 84vh;
+    margin-top: 80px;  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.graficos2{
+    width: 61vw;
+    height: 84vh;
+    margin-bottom: 3vh;
+    margin-top: 80px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+}
+
+.conteudoGrafico1{
+    display: flex;
+    position: relative;
+    height: 65vh;
+    width: 55vw;
+    justify-content: center;
+    background-color: gray;
+}
+
+.btn {
+    border-radius: 5px;
+    background-color: gray;
+    width: 187px;
+    height: 42px;
+    color: white;
+    border: none;
+    margin-top: 15px;
+    font-size: 15px;
+}
+
+.btn:hover {
+    background-color: rgb(155, 154, 154);
 }
