--- a/Public/dashboard/gameExperiente.css
+++ b/Public/dashboard/gameExperiente.css
@@ -140,6 +140,11 @@ nav button {
  justify-content: center;
 }
 
+.geral h1{
+  position: absolute;
+  margin-top: 96vh;
+}
+
 .resposta-btn {
  display: flex;
  justify-content: space-around;
@@ -198,8 +203,17 @@ nav button {
  margin: 5px;
 }
 
+.cronometro{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  margin-top: 15vh;
+justify-content: center;
+}
+
 .content1 {
- width: 73vw;
+ width: 44vw;
  height: 66vh;
  background-color: #cbcbcb;
  border-radius: 15px;
@@ -223,7 +237,7 @@ nav button {
 }
 
 .content2 {
- width: 85vw;
+ width: 44vw;
  height: 66vh;
  background-color: #cbcbcb;
  border-radius: 15px;
