Modificação - Organização dos graficos para fazer a plotagem e adequações dos códigos para fazer toda da passagem dos dados desde o banco de dados até o HTM

--- a/Public/dashboard/style.css
+++ b/Public/dashboard/style.css
@@ -25,10 +25,11 @@ nav {
  width: 100%;
  font-size: 22px;
  position: fixed;
+ z-index: 1;
  background-attachment: fixed;
  background-color: gray;
  justify-content: space-around;
- box-shadow: 0px 0px 15px black
+ box-shadow: 0px 0px 15px rgb(0, 0, 0)
 }
 
 
