--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -21,7 +21,7 @@ body::-webkit-scrollbar {
 .fundoImg {
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/index/fundoCadastro.jpg);
+    background-image: url(../assets/index/background.png);
     background-repeat: round;
     background-size: cover;
 }
@@ -459,5 +459,5 @@ body::-webkit-scrollbar {
 .RedesContato img {
     height: 6vh;
     margin: 6px;
-    margin-r
+ 
 }
